--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -17,12 +17,13 @@ jobs:
  
      - name: Checkout code
        uses: actions/checkout@v2
- 
-     - name: Login to DockerHub
-       uses: docker/login-action@v1 
+
+     - name: Log in to GHCR
+       uses: docker/login-action@v3
        with:
-         username: ${{ secrets.DOCKER_USERNAME }}
-         password: ${{ secrets.DOCKER_PASSWORD }}
+           registry: ghcr.io
+           username: ${{ github.actor }}
+           password: ${{ secrets.GITHUB_TOKEN }}
  
      - name: Declare SHA vars to use on other actions
        id: vars
