--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -3,7 +3,7 @@ app:
   version: v4
   port: 80
 image:
-  name: denvasyliev/k8sdiy
+  name: fataevalex/k8sdiy
   tag: build-2df9a62
 api:
   replicas: 1
