--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -86,5 +86,5 @@ jobs:
      - name: Push changes
        uses: ad-m/github-push-action@master
        with:
-         github_token: ${{ secrets.ACTIONS_TOKEN }}
+         github_token: ${{ secrets.GITHUB_TOKEN }}
          branch: ${{ github.ref }}
