--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -87,7 +87,7 @@ jobs:
        uses: ad-m/github-push-action@master
        with:
          github_token: ${{ secrets.GITHUB_TOKEN }}
-         branch: refs/heads/master
+         branch: ${{ github.ref }}
          github_url: https://github.com
          push_to_submodules: on-demand
          directory: .
