Move CD replace ACTION_TOKEN to GITHUB_TOKEN in github-push-action@master. fix

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -87,7 +87,4 @@ jobs:
        uses: ad-m/github-push-action@master
        with:
          github_token: ${{ secrets.GITHUB_TOKEN }}
-         branch: ${{ github.ref }}
-         github_url: https://github.com
-         push_to_submodules: on-demand
-         directory: .
+         branch: master
