f2: Switch registry to ghcr.io in helm

--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -3,7 +3,7 @@ app:
   version: v4
   port: 80
 image:
-  name: fataevalex/go-demo-app
+  name: ghcr.io/fataevalex/go-demo-app
   tag: build-2df9a62
 api:
   replicas: 1
