--- a/helm/templates/ascii-deploy.yaml
+++ b/helm/templates/ascii-deploy.yaml
@@ -9,12 +9,12 @@ metadata:
 spec:
   selector:
     matchLabels:
-      app: {{ .Release.Namespace }}-ascii
+      app: {{ .Release.Name }}-ascii
   replicas: {{ .Values.ascii.replicas }}
   template:
     metadata:
       labels:
-        app: {{ .Release.Namespace }}-ascii
+        app: {{ .Release.Name }}-ascii
         version: {{ .Values.app.version }}
     spec:
       containers:
@@ -25,14 +25,21 @@ spec:
           - "-role"
           - "ascii"
           - "-server"
-          - {{ .Release.Name }}-{{ .Values.nats.service.name }}
+          - {{ .Values.nats.service.name }}
         imagePullPolicy: Always
+        env:
+          - name: APP_DATASTORE
+            value: "{{ .Values.data.svc }}"
+          - name: APP_DB
+            value: "root@tcp(db:3306)/demo"
+          - name: APP_CACHE
+            value: "{{ .Values.cache.svc }}"
         resources:
           requests:
             cpu: 100m
             memory: 100Mi
         ports:
-        - containerPort: {{ .Values.ascii.port }}
+        - containerPort: 8080
           name: http
         securityContext:
         livenessProbe:
