--- a/helm/templates/img-deploy.yaml
+++ b/helm/templates/img-deploy.yaml
@@ -27,17 +27,19 @@ spec:
           - "-r"
           - "0.2"
           - "-server"
-          - {{ .Release.Name }}-{{ .Values.nats.service.name }}
+          - {{ .Values.nats.service.name }}
         imagePullPolicy: Always
         env:
+          - name: APP_DB
+            value: "root@tcp(db:3306)/demo"
           - name: APP_CACHE
-            value: "{{ .Release.Name }}-{{ .Values.redis.service.name }}"
+            value: "{{ .Values.cache.svc }}"
         resources:
           requests:
             cpu: 100m
             memory: 100Mi
         ports:
-        - containerPort: {{ .Values.img.port }}
+        - containerPort: 80
         securityContext:
         livenessProbe:
           httpGet:
