--- a/yaml/app-livenessProbe.yaml
+++ b/yaml/app-livenessProbe.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: demo
 spec:
   containers:
-    - image: gcr.io/k8s-k3s/demo:v1.0.0
+    - image: gcr.io/smartcity-gl/demo:v1.0.1
       name: app
 
       livenessProbe:
