--- a/yaml/app-readinessProbe.yaml
+++ b/yaml/app-readinessProbe.yaml
@@ -4,7 +4,7 @@ metadata:
   name: app-readinessprob
 spec:
   containers:
-    - image: gcr.io/k8s-k3s/demo:v2.0.0
+    - image: gcr.io/smartcity-gl/harmonic:v2.0.2
       name: app
 
       livenessProbe:
