--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -88,9 +88,9 @@ jobs:
          git config user.email "<>"
          git add helm/values.yaml
          git commit -m "update code version to ${{ steps.vars.outputs.sha_short }}"
-     
+
      - name: Push changes
        uses: ad-m/github-push-action@master
        with:
-         github_token: ${{ secrets.ACTIONS_TOKEN }}
+         github_token: ${{ secrets.GITHUB_TOKEN }}
          branch: master
